app/assets/stylesheets/components/_form.css.sass
$form-gutter: 12px
$form-offset: 11px
$form-spacing: 7.5px

// General form layout

.form-horizontal
  display: table
  .form-field
    display: table-row
    > *
      vertical-align: top
      display: table-cell
      //outline: 1px dashed silver

// Form layout in context

.form-horizontal
  width: 100%
  label
    width: 17%
  .form-controls
    width: 80%
  // entry editor (& asset editor?)
  .locale
    position: relative
  .locale-label
    position: absolute
    padding-top: $form-offset
    left: 58%

// Margins and other styling

.form-horizontal
  border-spacing: 0 $form-spacing
  color: $medium-gray
  label
    text-align: right
    padding: $form-offset $form-gutter $form-offset 0
    //padding-right: $form-gutter
  // Individual controls
.form-horizontal .form-controls,
.form-styled
  p
    margin: 11px 0
  input[type="text"],
  input[type="number"],
  input[type="email"],
  input[type="tel"],
  input[type="password"],
  input.time,
  textarea
    padding: 7px
    font-family: 'Open Sans', Arial, sans-serif
    font-size: 12px
    width: 57%
    border: 1px solid $lightest-gray
    +border-radius(3px 3px 3px 3px)
    background-color: $gray-background
    +box-shadow(0 1px 2px rgba(0,0,0,0.1) inset)
    +transition(background-color 0.3s ease-in, border-color 0.3s ease-in)
    &[disabled]
      background-color: white
      border: none
      +box-shadow(none)
      +transition(none)
    &:focus
      background-color: white
      border-color: $link-blue
      outline: none
    &.error-input:focus
      border-color: darken($red, 10%)
  &.fit-two input[type="text"], &.fit-two input[type="number"]
    width: 27%
    margin-right: 1%
  input[type="number"]
    padding-top: 8px
    padding-bottom: 8px
  input.date,
  input.time
    width: 105px !important
  .cf-location-editor
    .gmaps-container
      width: 57%
      height: 250px
  .ss-calendar,
  .ss-clock
    font-size: 14px
    color: $light-gray
    vertical-align: middle
    pointer-events: none // http://stackoverflow.com/questions/3680429/click-through-a-div-to-underlying-elements
    position: relative
    left: -25px
    top: 1px

  .sub-fields
    width: 57%
    position: relative
    label
      display: block
      float: left
      width: 40%
      input,
      input[type="text"]
        width: 100%
      span
        display: block
        margin-top: 5px
        text-align: left
    button
      margin-top: 13px


.form-horizontal .hint, //deprecated selector, too lazy to change HTML now
.form-hint
  vertical-align: top
  max-width: 40%
  color: $medium-gray
  padding: 0 0 0 $form-gutter
  margin-left: $form-gutter
  //opacity: 0
  &.tip
    padding: .7em .9em
    background-color: white
    background-color: rgba(255,255,255,0.95)
    +transition(opacity 0.3s ease-in-out)
    border-color: darken($light-rule, 3%)
    +box-shadow(0 1px 3px rgba(0,0,0,0.05))
    .arrow-left
      border-right-color: white
    .arrow-left-border
      border-right-color: darken($light-rule, 5%)
// TODO this does not work anymore, the position of the elements has changed
//input[type="text"]:focus + .hint,
//textarea:focus + .hint,
//input[type="number"]:focus + .hint,
//cf-field-editor:focus .hint
  //opacity: 1

.validation-error-display
  ul
    +plain-list
.form-inline-error
  color: $red
  padding-top: .3em
  font-size: .8em
  line-height: 1
  li
    margin-bottom: .3em
.form-box-error
  padding: .6em .9em
  background: darken($red, 3%)
  border: 1px solid darken($red, 16%)
  color: white
  +box-shadow(0 1px 1px rgba(255,255,255,0.25) inset)
  +border-radius(3px)

  display: block
  max-width: 57% !important
  position: static
  margin: 0 0 4px 0
  width: 57%
  text-align: center
  +transition(opacity 0.3s ease-in-out)

.field-collaborators
  position: absolute
  padding-top: $form-offset
  left: 62%
  .avatar
    $image-size: 28px
    display: inline-block
    position: relative
    margin-left: 3px
    +border-radius(3px)
    width: $image-size
    img
      height: $image-size

.select-field
  .form-controls
    padding-top: $form-offset
    select
      margin-top: -1px
      

// Special styling for the different editor widgets
// TODO Put in own file

// TODO Where is this used? Locations? autocomplete?
.form-field
  .results
    ul
      +plain-list
    font-size: 10px
    position: absolute
    right: 44px
    left: 16px
    z-index: 10
    background: white
    background: rgba(255,255,255,0.96)
    border: 1px solid shade(#FFFFFF, 10)
    +box-shadow(0 2px 6px rgba(0,0,0,0.1))
    +border-radius(0 0 3px 3px)
    .selected
      background-color: $result-list-highlight

.cf-location-editor
  .results
    overflow-y: auto
    max-height: 200px
    li
      padding: 5px 10px
      border-bottom: 1px solid $light-rule
      cursor: pointer
      &:hover
        background-color: $result-list-highlight
    .address
      display: block
      margin-bottom: 4px
    .lat,
    .lon
      font-size: 0.8em
      display: inline-block
      width: 12em
      color: $light-gray
  .search
    margin-bottom: 10px

.form-field
  .search-field
    width: 100%
    margin-top: 10px
    height: 35px
    //.dropdown-toggle
      height: 33px
      .ss-search
        top: 2.5px
      .ss-dropdown
        top: 4px
        right: 3px

.form-field
  // Styling for specific types
  &[data-field-type=boolean] .form-controls,
  &[data-field-type=array][data-field-items-type=string] .form-controls
    label
      width: auto
      position: relative
      top: -2px
    span
      position: relative
      top: 2px
  &[data-field-type=boolean] .form-controls
    padding-top: 10px

.form-field
  &[data-field-type=link],
  &[data-field-type=array][data-field-items-type=link]
    margin: 25px 0 15px
    .links 
      +plain-list
      border-top: 1px solid $light-rule
      margin-bottom: 15px
      li
        padding: 10px 7px
        border-bottom: 1px solid $light-rule
      .ss-delete
        float: right
        margin-top: 1px

